[package]
name = "apiforge"
version = "0.1.0"
edition = "2021"
authors = ["Apiforge Contributors"]
description = "Production API release automation CLI"
license = "MIT"
repository = "https://github.com/yourname/apiforge"
readme = "README.md"
keywords = ["devops", "deployment", "kubernetes", "docker", "release"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "apiforge"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Config and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

# Git
git2 = "0.19"

# Docker
bollard = "0.16"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# AWS
aws-config = "1"
aws-sdk-ecr = "1"
aws-sdk-ssm = "1"
aws-sdk-cloudfront = "1"
aws-sdk-sts = "1"

# GitHub
octocrab = "0.41"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Terminal output
indicatif = "0.17"
colored = "2"
console = "0.15"
comfy-table = "7"

# Templating
tera = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Embedded storage
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
semver = "1"
base64 = "0.22"
which = "6"
regex = "1"
dialoguer = "0.11"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
